--- a/home.html
+++ b/home.html
@@ -23,6 +23,11 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+    <!-- Export Libs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 
 <body style="opacity: 0; transition: opacity 0.5s;">
@@ -70,6 +75,9 @@
             </a>
             <a onclick="switchView('reports'); toggleMenu()" class="nav-item" id="nav-reports">
                 <i class="fas fa-list-alt"></i> Data Laporan
+            </a>
+            <a onclick="switchView('print'); toggleMenu()" class="nav-item" id="nav-print">
+                <i class="fas fa-print"></i> Cetak Laporan
             </a>
             <button onclick="confirmLogout()" class="btn-logout" style="margin-left: 10px;">
                 <i class="fas fa-sign-out-alt"></i> Logout
@@ -221,6 +229,61 @@
             </div>
         </div>
 
+        <!-- PRINT VIEW -->
+        <div id="print-view" class="view-section">
+            <div class="actions-toolbar">
+                <div style="font-weight: 700; font-size: 1.2rem;">Cetak Laporan</div>
+            </div>
+
+            <div
+                style="background: white; padding: 2rem; border-radius: 12px; border: 1px solid #e2e8f0; max-width: 800px; margin: 0 auto;">
+                <h3 style="margin-bottom: 2rem; border-bottom: 1px solid #f1f5f9; padding-bottom: 1rem;">Konfigurasi
+                    Ekspor</h3>
+
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 30px;">
+                    <div class="form-group">
+                        <label style="display: block; margin-bottom: 8px; font-weight: 500;">Sumber Data</label>
+                        <select id="exportSource"
+                            style="width: 100%; padding: 10px; border-radius: 8px; border: 1px solid #cbd5e1;">
+                            <option value="all">Semua Data</option>
+                            <option value="public">Laporan Warga</option>
+                            <option value="admin">Data Teknis Dinas</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label style="display: block; margin-bottom: 8px; font-weight: 500;">Status Laporan</label>
+                        <select id="exportStatus"
+                            style="width: 100%; padding: 10px; border-radius: 8px; border: 1px solid #cbd5e1;">
+                            <option value="all">Semua Status</option>
+                            <option value="pending">Menunggu Verifikasi</option>
+                            <option value="verified">Terverifikasi</option>
+                            <option value="rejected">Ditolak</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div style="display: flex; gap: 15px; justify-content: flex-end;">
+                    <button onclick="exportToExcel()"
+                        style="display: flex; align-items: center; gap: 8px; padding: 12px 24px; background: #10b981; color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; transition: transform 0.2s;">
+                        <i class="fas fa-file-excel"></i> Export Excel
+                    </button>
+                    <button onclick="exportToPDF()"
+                        style="display: flex; align-items: center; gap: 8px; padding: 12px 24px; background: #ef4444; color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; transition: transform 0.2s;">
+                        <i class="fas fa-file-pdf"></i> Export PDF
+                    </button>
+                </div>
+
+                <div
+                    style="margin-top: 30px; padding: 15px; background: #f8fafc; border-radius: 8px; border-left: 4px solid #3b82f6;">
+                    <p style="font-size: 0.9rem; color: #475569;">
+                        <i class="fas fa-info-circle"></i>
+                        Data yang diekspor akan sesuai dengan filter yang dipilih di atas. Pastikan data sudah termuat
+                        sebelum melakukan ekspor.
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Action Modal (Clean White) -->
@@ -294,6 +357,26 @@
                         <i class="fas fa-trash"></i> Hapus
                     </button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Image Modal -->
+    <div class="modal-overlay" id="imageModal" style="z-index: 9999; background: rgba(0,0,0,0.9);">
+        <div class="modal-content"
+            style="background: transparent; box-shadow: none; max-width: 90vw; max-height: 90vh; width: auto; padding: 0;">
+            <button class="btn-modal-close"
+                style="position: absolute; top: -40px; right: 0; color: white; background: none; border: none; font-size: 2rem; cursor: pointer;"
+                onclick="closeImageModal()">
+                <i class="fas fa-times"></i>
+            </button>
+            <img id="previewImage" src=""
+                style="max-width: 100%; max-height: 80vh; border-radius: 8px; border: 2px solid white;">
+            <div style="text-align: center; margin-top: 15px;">
+                <a id="downloadLink" href="#" target="_blank" download
+                    style="color: white; text-decoration: none; border: 1px solid white; padding: 8px 16px; border-radius: 20px;">
+                    <i class="fas fa-download"></i> Unduh Gambar Asli
+                </a>
             </div>
         </div>
     </div>
@@ -469,6 +552,7 @@
                         <th>Nilai SDI</th>
                         <th>Nilai PCI</th>
                         <th>Status</th>
+                        <th>Lampiran & Lokasi</th>
                         <th style="text-align: center;">Aksi</th>
                     </tr>
                 `;
@@ -481,6 +565,7 @@
                         <th>Lokasi</th>
                         <th>Keterangan</th>
                         <th>Status</th>
+                         <th>Lampiran & Lokasi</th>
                         <th style="text-align: center;">Aksi</th>
                     </tr>
                 `;
@@ -500,9 +585,10 @@
 
             let contentHtml = '';
             data.forEach(item => {
-                const date = new Date(item.created_at).toLocaleDateString("id-ID", {
+                const dateObj = new Date(item.created_at);
+                const date = dateObj.toLocaleDateString("id-ID", {
                     day: 'numeric', month: 'short', year: 'numeric'
-                });
+                }) + ' ' + dateObj.toLocaleTimeString("id-ID", { hour: '2-digit', minute: '2-digit' }).replace('.', ':');
 
                 let statusBadge = '';
                 if (item.status === 'verified') statusBadge = `<span class="badge status-verified">Verified</span>`;
@@ -510,6 +596,37 @@
                 else statusBadge = `<span class="badge status-pending">Pending</span>`;
 
                 let row = '';
+
+                // Attachment & Location Column
+                let attachmentHtml = `<div style="display: flex; flex-direction: column; gap: 5px;">`;
+
+                // Photo
+                if (item.photo_url) {
+                    // Trigger async size fetch
+                    getImageSize(item.photo_url, `size-${item.id}`);
+
+                    attachmentHtml += `
+                        <div style="display: flex; align-items: center; gap: 8px;">
+                            <button onclick="showImage('${item.photo_url}')" style="border: 1px solid #cbd5e1; background: white; border-radius: 6px; padding: 4px 8px; cursor: pointer; display: flex; align-items: center; gap: 5px; font-size: 0.85rem;">
+                                <i class="fas fa-image" style="color: #3b82f6;"></i> Lihat Foto
+                            </button>
+                            <span id="size-${item.id}" style="font-size: 0.75rem; color: #64748b; min-width: 45px;">...</span>
+                        </div>
+                    `;
+                } else {
+                    attachmentHtml += `<span style="font-size: 0.8rem; color: #94a3b8; font-style: italic;">Tanpa Foto</span>`;
+                }
+
+                // Map
+                if (item.latitude && item.longitude) {
+                    attachmentHtml += `
+                        <button onclick="openMap(${item.latitude}, ${item.longitude})" style="width: fit-content; border: 1px solid #cbd5e1; background: white; border-radius: 6px; padding: 4px 8px; cursor: pointer; display: flex; align-items: center; gap: 5px; font-size: 0.85rem; margin-top: 4px;">
+                            <i class="fas fa-map-marker-alt" style="color: #ef4444;"></i> Lihat Peta
+                        </button>
+                    `;
+                }
+                attachmentHtml += `</div>`;
+
 
                 if (type === 'admin') {
                     const sdi = item.sdi_value ? `<span class="badge badge-sdi">${item.sdi_value} (${item.sdi_category || '-'})</span>` : '-';
@@ -524,6 +641,7 @@
                             <td>${sdi}</td>
                             <td>${pci}</td>
                             <td>${statusBadge}</td>
+                            <td>${attachmentHtml}</td>
                             <td style="text-align: center;">
                                 <button onclick="openActionModal(${item.id})" class="action-btn-small" style="background: white; border: 1px solid #e2e8f0; color: #3b82f6; cursor: pointer; padding: 6px 12px; border-radius: 6px;">
                                     <i class="fas fa-cog"></i>
@@ -542,6 +660,7 @@
                                 <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${item.description || '-'}</div>
                             </td>
                             <td>${statusBadge}</td>
+                            <td>${attachmentHtml}</td>
                             <td style="text-align: center;">
                                 <button onclick="openActionModal(${item.id})" class="action-btn-small" style="background: white; border: 1px solid #e2e8f0; color: #3b82f6; cursor: pointer; padding: 6px 12px; border-radius: 6px;">
                                     <i class="fas fa-cog"></i>
@@ -590,6 +709,155 @@
 
             const { error } = await sb.from('road_reports').update(updateData).eq('id', id);
             if (!error) { closeModal(); loadReports(); }
+        }
+
+        // --- Export Functions --- //
+
+        function getFilteredDataForExport() {
+            const source = document.getElementById('exportSource').value;
+            const status = document.getElementById('exportStatus').value;
+
+            return allReports.filter(item => {
+                const matchSource = (source === 'all') ? true : (item.report_source === source);
+                const matchStatus = (status === 'all') ? true : (item.status === status);
+                return matchSource && matchStatus;
+            });
+        }
+
+        function exportToExcel() {
+            const data = getFilteredDataForExport();
+            if (data.length === 0) {
+                alert("Tidak ada data yang sesuai filter untuk diekspor!");
+                return;
+            }
+
+            // Map data to readable format
+            const exportData = data.map(item => {
+                const dateObj = new Date(item.created_at);
+                const dateStr = dateObj.toLocaleDateString("id-ID") + ' ' + dateObj.toLocaleTimeString("id-ID", { hour: '2-digit', minute: '2-digit' }).replace('.', ':');
+
+                return {
+                    "ID": item.id,
+                    "Tanggal & Jam": dateStr,
+                    "Sumber": item.report_source === 'admin' ? 'Teknis Dinas' : 'Laporan Warga',
+                    "Pelapor": item.reporter_name || '-',
+                    "Kecamatan": item.district || '-',
+                    "Deskripsi/Keterangan": item.description || '-',
+                    "Nilai SDI": item.sdi_value || '-',
+                    "Nilai PCI": item.pci_value || '-',
+                    "Status": item.status
+                };
+            });
+
+            const ws = XLSX.utils.json_to_sheet(exportData);
+            const wb = XLSX.utils.book_new();
+            XLSX.utils.book_append_sheet(wb, ws, "Laporan");
+
+            // Save file
+            const filename = `Laporan_Jalan_${new Date().toISOString().slice(0, 10)}.xlsx`;
+            XLSX.writeFile(wb, filename);
+        }
+
+        function exportToPDF() {
+            const data = getFilteredDataForExport();
+            if (data.length === 0) {
+                alert("Tidak ada data yang sesuai filter untuk diekspor!");
+                return;
+            }
+
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            // Title
+            doc.setFontSize(18);
+            doc.text("Laporan Data Jalan", 14, 22);
+            doc.setFontSize(11);
+            doc.text(`Dicetak pada: ${new Date().toLocaleDateString("id-ID")}`, 14, 30);
+
+            // Prepare Table Data
+            const tableColumn = ["Tanggal", "Sumber", "Pelapor", "Kecamatan", "Ket.", "Status"];
+            const tableRows = [];
+
+            data.forEach(item => {
+                const dateObj = new Date(item.created_at);
+                const dateStr = dateObj.toLocaleDateString("id-ID") + ' ' + dateObj.toLocaleTimeString("id-ID", { hour: '2-digit', minute: '2-digit' }).replace('.', ':');
+
+                const reportData = [
+                    dateStr,
+                    item.report_source === 'admin' ? 'Dinas' : 'Warga',
+                    item.reporter_name || 'Admin',
+                    item.district || '-',
+                    (item.description || '-').substring(0, 30) + (item.description && item.description.length > 30 ? '...' : ''),
+                    item.status
+                ];
+                tableRows.push(reportData);
+            });
+
+            // Generate Table
+            doc.autoTable({
+                head: [tableColumn],
+                body: tableRows,
+                startY: 40,
+                styles: { fontSize: 8 },
+                headStyles: { fillColor: [59, 130, 246] } // Blue header
+            });
+
+            doc.save(`Laporan_Jalan_${new Date().toISOString().slice(0, 10)}.pdf`);
+        }
+
+        // --- Attachment / Map Utilities --- //
+
+        function openMap(lat, lng) {
+            if (!lat || !lng) return;
+            const url = `https://www.google.com/maps?q=${lat},${lng}`;
+            window.open(url, '_blank');
+        }
+
+        function showImage(url) {
+            const modal = document.getElementById('imageModal');
+            const img = document.getElementById('previewImage');
+            const dl = document.getElementById('downloadLink');
+
+            img.src = url;
+            dl.href = url;
+
+            modal.style.display = 'flex';
+            modal.offsetHeight; // reflow
+            modal.style.opacity = '1';
+            modal.classList.add('active');
+        }
+
+        function closeImageModal() {
+            const modal = document.getElementById('imageModal');
+            modal.style.opacity = '0';
+            modal.classList.remove('active');
+            setTimeout(() => {
+                modal.style.display = 'none';
+                document.getElementById('previewImage').src = '';
+            }, 300);
+        }
+
+        async function getImageSize(url, elementId) {
+            try {
+                // Determine if it is a Supabase Storage URL
+                // If the URL is public, we can just do a HEAD request
+                const response = await fetch(url, { method: 'HEAD' });
+                if (response.ok) {
+                    const sizeBytes = response.headers.get('content-length');
+                    if (sizeBytes) {
+                        const sizeMB = (parseInt(sizeBytes) / (1024 * 1024)).toFixed(2);
+                        const el = document.getElementById(elementId);
+                        if (el) el.innerText = `${sizeMB} MB`;
+                    } else {
+                        const el = document.getElementById(elementId);
+                        if (el) el.innerText = `Unknown`;
+                    }
+                }
+            } catch (e) {
+                console.warn("Could not fetch image size for", url, e);
+                const el = document.getElementById(elementId);
+                if (el) el.innerText = `Error`;
+            }
         }
     </script>
 </body>
